--- a/Plex Request Client/src/styles.css
+++ b/Plex Request Client/src/styles.css
@@ -124,15 +124,17 @@
 	color: #5f5;
 	outline: none;
 }
-
 .webdesigntuts-workshop button:active {
 	background: #292929;
 	background: linear-gradient(#393939, #292929);
 	box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
 	top: 1px;
 }
+.webdesigntuts-workshop-form td {
+	padding:0px 0px 0px 10px;
+}
 
-.webdesigntuts-workshop-form {
+.webdesigntuts-workshop-form tr {
     color: #5f5;
     font-family: 'Cabin', helvetica, arial, sans-serif;
     font-size: 13px;
@@ -141,10 +143,22 @@
     background: linear-gradient(#666, #111);
     border: 1px solid #000;
     border-radius: 5px;
+    max-width: 500px;
     box-shadow: inset 0 0 0 1px #272727;
-    display: block;
-    position: relative;
-    z-index: 1;
+}
+.webdesigntuts-workshop-form {
+    color: #5f5;
+    font-family: 'Cabin', helvetica, arial, sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    background: #111;
+    background: linear-gradient(#262, #111);
+    border: 1px solid #000;
+    border-radius: 5px;
+    width:100%;
+	height: 100%;
+	position: absolute;
+    box-shadow: inset 0 0 0 1px #272727;
 }
 .webdesigntuts-workshop-form button {
     background: #222;
@@ -165,6 +179,25 @@
     width: 80px;
 }
 
+.webdesigntuts-workshop-form th {
+    background: #222;
+    background: linear-gradient(#444, #000);
+
+}
+
+.webdesigntuts-workshop-form table {
+    background: #222;
+    background: linear-gradient(#666, #555);
+    width:100%;
+}
+
+.webdesigntuts-workshop-form button:hover,
+.webdesigntuts-workshop-form button:focus {
+	background: #292929;
+	background: linear-gradient(#393939, #292929);
+	color: #5f5;
+	outline: none;
+}
 
 @keyframes glow {
     0% {
