--- a/Plex Request Client/WebContent/styles.css
+++ b/Plex Request Client/WebContent/styles.css
@@ -167,7 +167,6 @@
     border: 1px solid #444;
     border-left-color: #000;
     border-radius: 0 5px 5px 0;
-    box-shadow: 0 2px 0 #000;
     color: #fff;
     display: block;
     float: left;
@@ -195,10 +194,39 @@
 .webdesigntuts-workshop-form button:focus {
 	background: #292929;
 	background: linear-gradient(#393939, #292929);
-	color: #5f5;
-	outline: none;
+	animation: glow 800ms ease-out infinite alternate;
+}
+.webdesigntuts-workshop-chk {
+	-webkit-appearance: none;
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 9px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+}
+.webdesigntuts-workshop-chk:hover {
+	animation: glow 800ms ease-out infinite alternate;
+}
+.webdesigntuts-workshop-chk:active, .webdesigntuts-workshop-chk:checked:active {
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
 }
 
+.webdesigntuts-workshop-chk:checked {
+	background-color: #e9ecee;
+	border: 1px solid #e9ecee;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+	color: #99a1a7;
+}
+.webdesigntuts-workshop-chk:checked:after {
+	content: '\2714';
+	font-size: 16px;
+	position: absolute;
+	top: -1px;
+	left: 3px;
+	color: #507554;
+}
 @keyframes glow {
     0% {
 		border-color: #393;
